--- a/docs/en/03.extensions/02.handlers.md
+++ b/docs/en/03.extensions/02.handlers.md
@@ -1,9 +1,8 @@
-## Extensions[](#extensions)
+---
+title: Handlers
+---
 
-This section will go over the extensions available for extending the behavior of the Pages module.
-
-
-### Handlers[](#extensions/handlers)
+### Handlers
 
 Page `handler` are an extension that let you extend the behavior of pages.
 
