--- a/docs/en/01.introduction/01.index.md
+++ b/docs/en/01.introduction/01.index.md
@@ -8,3 +8,6 @@ title: Introduction
 
 The Pages module let's you create and manage structured page content and automatically generate navigation from it too!
 
+## Videos
+
+[https://pyrocms.com/videos/series/getting-started/creating-your-first-page](https://pyrocms.com/videos/series/getting-started/creating-your-first-page)
