--- a/docs/en/02.the-basics/02.types.md
+++ b/docs/en/02.the-basics/02.types.md
@@ -2,7 +2,11 @@
 title: Types
 ---
 
-### Types
+# Types
+
+<div class="documentation__toc"></div>
+
+## Introduction
 
 Page `types` are allow you to define custom fields and layout for pages _of this type_.
 
