--- a/docs/en/02.the-basics/03.pages.md
+++ b/docs/en/02.the-basics/03.pages.md
@@ -2,7 +2,11 @@
 title: Pages
 ---
 
-### Pages
+# Pages
+
+<div class="documentation__toc"></div>
+
+## Introduction
 
 Pages are the primary components of your structured content. Every page has a type that defines it's available fields and layout.
 
