--- a/docs/en/02.the-basics/04.plugin.md
+++ b/docs/en/02.the-basics/04.plugin.md
@@ -2,10 +2,13 @@
 title: Plugin
 ---
 
-### Plugin
+# Plugin
+
+<div class="documentation__toc"></div>
+
+## Introduction
 
 This section will go over how to use the plugin that comes with the Pages module.
-
 
 #### structure
 
