--- a/docs/en/04.development/02.handlers.md
+++ b/docs/en/04.development/02.handlers.md
@@ -2,7 +2,11 @@
 title: Handlers
 ---
 
-### Handlers
+# Handlers
+
+<div class="documentation__toc"></div>
+
+## Introduction
 
 Page `handler` are an extension that let you extend the behavior of pages.
 
