--- a/docs/en/01.prologue/02.change-log.md
+++ b/docs/en/01.prologue/02.change-log.md
@@ -30,6 +30,8 @@ Features that are deprecated will generally be removed in the next `minor` updat
 ### [2.6.0] - 2019-03-13
 #### Added
 - Added `pages:dump` CLI command.
+- Added translatable page slugs.
+- Added `publish_at` field and logic.
 
 #### Fixed
 - Fixed issues around `config:cache` like closures and re-generating cache on pages save.
