--- a/docs/en/02.getting-started/02.introduction.md
+++ b/docs/en/02.getting-started/02.introduction.md
@@ -12,9 +12,8 @@ The Pages module let's you create and manage structured page content and automat
 
 ## Features
 
-The Settings module comes with everything you need to manage settings values for addons.
+The Pages module comes with everything you need to manage rich content pages.
 
 - Powered by Field Types
-- Compatible with any addon.
-- Integrates with configuration.
-- Easy integration with any project.
+- Supports multiple page types.
+- Integrates with [sitemap-extension](/documentation/sitemap-extension).
