Forced setting  during  to avoid conflicts with new clone feature.

--- a/docs/en/01.prologue/02.change-log.md
+++ b/docs/en/01.prologue/02.change-log.md
@@ -27,7 +27,14 @@ Features that are deprecated will generally be removed in the next `minor` updat
 
 ## Releases
 
-### [2.6.0] - 2019-03-13
+
+### [2.6.17] - 2019-04-09
+#### Changed
+- Forced setting `str_id` during `saving` to avoid conflicts with new clone feature.
+- Moved 1-liner command for `str_id` logic inline to the observer method. 
+
+
+### [2.6.16] - 2019-03-13
 #### Added
 - Added `pages:dump` CLI command.
 - Added translatable page slugs.
