--- a/docs/en/04.developers/01.index.md
+++ b/docs/en/04.developers/01.index.md
@@ -1,6 +1,6 @@
 ---
-title: Development
-redirect: development/handlers
+title: Developers
+redirect: developers/handlers
 ---
 
-## Development
+## Developers
