--- a/docs/en/01.prologue/02.change-log.md
+++ b/docs/en/01.prologue/02.change-log.md
@@ -28,6 +28,11 @@ Features that are deprecated will generally be removed in the next `minor` updat
 ## Releases
 
 
+### [2.6.18] - 2019-04-16
+#### Fixed
+- Fixed formatting issue with `bootstrap4` automated navigation structure.
+
+
 ### [2.6.17] - 2019-04-09
 #### Changed
 - Forced setting `str_id` during `saving` to avoid conflicts with new clone feature.
