Fix issue with structure plugin function.

--- a/docs/en/01.prologue/02.change-log.md
+++ b/docs/en/01.prologue/02.change-log.md
@@ -28,6 +28,11 @@ Features that are deprecated will generally be removed in the next `minor` updat
 ## Releases
 
 
+### [2.6.19] - 2019-04-24
+#### Fixed
+- Fixed issue with `structure` plugin function returning pages not intended for navigation.
+
+
 ### [2.6.18] - 2019-04-16
 #### Fixed
 - Fixed formatting issue with `bootstrap4` automated navigation structure.
