--- a/docs/en/01.prologue/02.change-log.md
+++ b/docs/en/01.prologue/02.change-log.md
@@ -28,6 +28,11 @@ Features that are deprecated will generally be removed in the next `minor` updat
 ## Releases
 
 
+### [2.6.20] - 2019-05-08
+#### Fixed
+- Fixed issue with `findByPath` method on `PageInterface` to account for translatable 
+
+
 ### [2.6.19] - 2019-04-24
 #### Fixed
 - Fixed issue with `structure` plugin function returning pages not intended for navigation.
