Fix issue with versioning

--- a/docs/en/01.prologue/02.change-log.md
+++ b/docs/en/01.prologue/02.change-log.md
@@ -28,6 +28,11 @@ Features that are deprecated will generally be removed in the next `minor` updat
 ## Releases
 
 
+### [2.6.21] - 2019-06-13
+#### Fixed
+- Fixed issue with versioning where page entry data was not loading properly. 
+
+
 ### [2.6.20] - 2019-05-08
 #### Fixed
 - Fixed issue with `findByPath` method on `PageInterface` to account for translatable 
