Added support for refresh command

--- a/docs/en/01.prologue/02.change-log.md
+++ b/docs/en/01.prologue/02.change-log.md
@@ -28,6 +28,11 @@ Features that are deprecated will generally be removed in the next `minor` updat
 ## Releases
 
 
+### [2.6.22] - 2019-07-19
+#### Added
+- Added support for `php artisan refresh` command. 
+
+
 ### [2.6.21] - 2019-06-13
 #### Fixed
 - Fixed issue with versioning where page entry data was not loading properly. 
