Improve messaging for refresh command.

--- a/docs/en/01.prologue/02.change-log.md
+++ b/docs/en/01.prologue/02.change-log.md
@@ -28,6 +28,11 @@ Features that are deprecated will generally be removed in the next `minor` updat
 ## Releases
 
 
+### [2.6.24] - 2019-08-01
+#### Changed
+- Changed verbiage for `settings:dump` command. 
+
+
 ### [2.6.23] - 2019-08-01
 #### Added
 - Added `sitemap` callback to `\Anomaly\PagesModule\Page\PageRepository` for [Sitemap Extension](/documentation/sitemap-extension) support. 
