Improve messaging for refresh command.

--- a/docs/en/01.prologue/02.change-log.md
+++ b/docs/en/01.prologue/02.change-log.md
@@ -30,7 +30,10 @@ Features that are deprecated will generally be removed in the next `minor` updat
 
 ### [2.6.24] - 2019-08-01
 #### Changed
-- Changed verbiage for `settings:dump` command. 
+- Changed verbiage for `pages:dump` command.
+
+#### Added
+- Added `Turkish` translation thanks to [@fatihalp](https://github.com/anomalylabs/pages-module/pull/68). 
 
 
 ### [2.6.23] - 2019-08-01
