--- a/docs/en/01.index.md
+++ b/docs/en/01.index.md
@@ -1,7 +1,7 @@
 ---
-title: Settings Module
+title: Pages Module
 redirect: getting-started
 hidden: true
 ---
 
-## Settings Module
+## Pages Module
