--- a/docs/en/01.prologue/02.change-log.md
+++ b/docs/en/01.prologue/02.change-log.md
@@ -28,6 +28,11 @@ Features that are deprecated will generally be removed in the next `minor` updat
 ## Releases
 
 
+### [2.6.25] - 2020-07-07
+#### Fixed
+- Fixed issue with disabled pages not removing from the index.
+
+
 ### [2.6.24] - 2019-08-01
 #### Changed
 - Changed verbiage for `pages:dump` command.
