--- a/docs/en/01.prologue/02.change-log.md
+++ b/docs/en/01.prologue/02.change-log.md
@@ -28,6 +28,13 @@ Features that are deprecated will generally be removed in the next `minor` updat
 ## Releases
 
 
+### [2.6.26] - 2020-10-02
+#### Fixed
+- Fixed issue with **home** and **exact** being enabled at the same time.
+#### Changed
+- Return default page translations where paths missing.
+
+
 ### [2.6.25] - 2020-07-07
 #### Fixed
 - Fixed issue with disabled pages not removing from the index.
